# k8s-resource-optimize

./: LICENSE  README.md  invoke.yaml
examples/: values-file-example.yaml
liquibase/: Dockerfile
liquibase/src/: liquibase.properties  master.xml
placeless-cluster-agent/app/: main.py
placeless-controller/: Dockerfile  requirements.txt
placeless-controller/src/: CONSTANTS.py  api.py  client-cert.pem  handlers.py  helpers.py  kube_client.py  schedule_resources_update_by_placeless.py
placeless-db-client/: README.md  pyproject.toml  setup.py
placeless-db-client/src/placeless_pdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
placeless-db-client/src/placelessdb/: FT_Groups.py  PlacelessDB.py  __init__.py  common.py  event_table.py  prediction_table.py  queries  residual_table.py  updates_table.py  usage_table.py  workload_table.py
placeless-helm-chart/: Chart.yaml  README.md  values.yaml
placeless-helm-chart/charts/: mysql-9.5.1.tgz
placeless-helm-chart/templates/: _helpers.tpl  placeless-agent-deployment.yaml  placeless-agent-rbac.yaml  placeless-agent-service-account.yaml  placeless-configmap.yaml  placeless-controller-deployment.yaml  placeless-controller-rbac.yaml  placeless-controller-service-account.yaml  placeless-db-hook-install-job.yaml  placeless-ml-build.yaml  placeless-ml-predict.yaml  placeless-ml-service-account.yaml  placeless-streamlit-view
placeless-ml-jobs/: Dockerfile  requirements.in  requirements.txt
placeless-ml-jobs/app/: RetrainAndBuild.py  S3.py  (+5 more)
placeless-view/: Dockerfile  dashboard.py  requirements.txt  toggle_view.py
(+6 files in other folders)
