[build-system]
requires = ["mysql-connector-python==8.0.28",
            "mysql-connector",
            "setuptools==62.0.0",
            "numpy==1.21.5",
            "protobuf==3.20.0",
            "python-dateutil==2.8.2",
            "pytz==2022.1",
            "six==1.16.0",]
build-backend = "setuptools.build_meta"